--- a/signaling-server/package.json
+++ b/signaling-server/package.json
@@ -2,6 +2,7 @@
   "name": "secure-signaling-server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
